--- a/app/src/main/res/layout/activity_my_login.xml
+++ b/app/src/main/res/layout/activity_my_login.xml
@@ -73,11 +73,11 @@
             android:text="Forgot Password?"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/textView2"
+            android:id="@+id/tvForgot_MyLoginActivity"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="50dp"
             android:textSize="20sp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
