--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -9,7 +9,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:id="@+id/ivCircle"
+            android:id="@+id/ivCircle_Signup"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
@@ -21,7 +21,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/ivCircle"
+            app:layout_constraintTop_toBottomOf="@+id/ivCircle_Signup"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/textInputLayout3"
@@ -31,7 +31,7 @@
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:id="@+id/etEmailSignUp"
+                android:id="@+id/etEmail_Signup"
                 android:hint="Email" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:hint="password"
                 android:gravity="center"
-                android:id="@+id/etPasswordSignUp" />
+                android:id="@+id/etPassword_Signup" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -68,14 +68,14 @@
                 android:layout_height="wrap_content"
                 android:hint="UserName"
                 android:gravity="center"
-                android:id="@+id/etUserNameSignUp" />
+                android:id="@+id/etUserName_Signup" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
             android:text="Sign Up"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:id="@+id/btnRegister"
+            android:id="@+id/btnRegister_Signup"
             android:layout_marginTop="30dp"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
             app:layout_constraintStart_toStartOf="parent"
