--- a/app/src/main/res/layout/activity_my_login.xml
+++ b/app/src/main/res/layout/activity_my_login.xml
@@ -10,7 +10,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:srcCompat="@tools:sample/avatars"
-            android:id="@+id/imageViewProfile"
+            android:id="@+id/ivProfile_Login"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="17dp"
@@ -21,25 +21,25 @@
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
             android:ems="10"
-            android:id="@+id/editTextTextEmailAddress"
+            android:id="@+id/etEmail_Login"
             android:hint="Email"
             android:gravity="center|center_horizontal"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="25dp"
-            app:layout_constraintTop_toBottomOf="@+id/imageViewProfile"
+            app:layout_constraintTop_toBottomOf="@+id/ivProfile_Login"
             android:minHeight="48dp" />
 
     <EditText
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
+            android:inputType="text|textPassword"
             android:ems="10"
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/etPassword_Login"
             android:hint="password"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
+            app:layout_constraintTop_toBottomOf="@+id/etEmail_Login"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:gravity="center|center_horizontal"
@@ -49,31 +49,31 @@
             android:text="Sign In"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:id="@+id/buttonSignIn"
+            android:id="@+id/btnSignin_Login"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+            app:layout_constraintTop_toBottomOf="@+id/etPassword_Login" />
 
     <Button
             android:text="Sign Up"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:id="@+id/buttonSignUp"
+            android:id="@+id/btnSignup_Login"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/buttonSignIn"
+            app:layout_constraintTop_toBottomOf="@+id/btnSignin_Login"
             android:layout_marginTop="20dp" />
 
     <TextView
             android:text="Forgot Password?"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvForgot_MyLoginActivity"
+            android:id="@+id/btnForgot_Login"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
