update user profile - setting

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -9,7 +9,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:id="@+id/ivCircle_Signup"
+            android:id="@+id/ivCircle_ProfileActivity"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintEnd_toEndOf="parent"
@@ -21,7 +21,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/ivCircle_Signup"
+            app:layout_constraintTop_toBottomOf="@+id/ivCircle_ProfileActivity"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/textInputLayout3"
@@ -75,7 +75,7 @@
             android:text="Sign Up"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:id="@+id/btnRegister_Signup"
+            android:id="@+id/btnUpdateProfile_ProfileActivity"
             android:layout_marginTop="30dp"
             app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
             app:layout_constraintStart_toStartOf="parent"
