--- a/app/src/main/res/layout/card_received.xml
+++ b/app/src/main/res/layout/card_received.xml
@@ -11,24 +11,24 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:cardElevation="3dp"
                 app:cardCornerRadius="5dp"
-                android:background="#F6E54B">
+                android:background="#804CBDFA">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:background="#F6E54B">
+                    android:layout_gravity="start"
+                    android:background="#804CBDFA">
 
                 <TextView
                         android:text="TextView"
@@ -36,7 +36,7 @@
                         android:layout_height="wrap_content"
                         android:id="@+id/tvSend_card_send"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:textSize="18sp"
                         android:gravity="start"
