chat final lecture

--- a/app/src/main/res/layout/card_received.xml
+++ b/app/src/main/res/layout/card_received.xml
@@ -34,7 +34,7 @@
                         android:text="TextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/tvSend_card_send"
+                        android:id="@+id/tvReceive_card_received"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
